RESOLVED FIXED314472
TestWebKitAPI.NetworkProcess.LaunchOnlyWhenNecessary is flaky
https://bugs.webkit.org/show_bug.cgi?id=314472
Summary TestWebKitAPI.NetworkProcess.LaunchOnlyWhenNecessary is flaky
Chris Dumez
Reported 2026-05-09 01:35:07 PDT
TestWebKitAPI.NetworkProcess.LaunchOnlyWhenNecessary is flaky: ``` /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Tools/TestWebKitAPI/Tests/WebKit/WKWebView/NetworkProcess.mm:119 Value of: [websiteDataStore _networkProcessExists] Actual: true Expected: false ```
Attachments
Chris Dumez
Comment 1 2026-05-09 01:35:18 PDT
Chris Dumez
Comment 2 2026-05-09 01:39:58 PDT
EWS
Comment 3 2026-05-11 15:15:43 PDT
Committed 313035@main (450541bb3f72): <https://commits.webkit.org/313035@main> Reviewed commits have been landed. Closing PR #64607 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.