TestWebKitAPI.NetworkProcess.LaunchOnlyWhenNecessary is flaky https://bugs.webkit.org/show_bug.cgi?id=314472 rdar://176587141

Reviewed by Per Arne Vollan.

The test was trying to make sure that the network process wasn't getting
launched unnecessarily. However, the network process was actually launched
unnecessarily when constructing a WKWebView:
```
NetworkProcessProxy::ensureDefaultNetworkProcess(); // in WebProcessPool::createWebPage().
```

However, `NetworkProcessProxy::ensureDefaultNetworkProcess()` doesn't
store the smart pointer anywhere, it just returns it. As a result, this
was constructing and then destrucing a NetworkProcessProxy in quick
succession, causing the test to be flaky.

To address the issue, stop making this call. The intention seemed to be
launching the network process but it would not happen in practice since
the NetworkProcessProxy would get destroyed right away. Also, the API
test clearly doesn't expect the network process to get launched in this
case.

* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createWebPage):

Canonical link: https://commits.webkit.org/313035@main